fix: tweaks to make more readable

--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ h1 {
 }
 
 h2 {
-    font-size: 1.25rem;
+    font-size: 1.4rem;
 }
 
 .flash {
@@ -120,7 +120,6 @@ a {
 
 .job-description li {
     margin-bottom: 0.7rem;
-    /* color: var(--text-secondary); */
     line-height: 1.6;
 }
 
